implement like and dislike a post
