# cmd/swag/docs/swagger.yaml
@@ -326,6 +326,78 @@ paths:
       summary: Delete a post with id
       tags:
       - posts
+  /post/dislike:
+    delete:
+      consumes:
+      - application/json
+      description: Dislike a post with id
+      parameters:
+      - description: post id in base58 format
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: Bearer <Token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.SuccessRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.AppError'
+      security:
+      - ApiKeyAuth: []
+      summary: Dislike a post with id
+      tags:
+      - posts
+  /post/like:
+    post:
+      consumes:
+      - application/json
+      description: like a new post
+      parameters:
+      - description: Bearer <Token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: post id in base58 format
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/common.SuccessRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.AppError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.AppError'
+      security:
+      - ApiKeyAuth: []
+      summary: like a new post
+      tags:
+      - posts
   /post/update:
     post:
       consumes:
